--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "string-similarity": "^4.0.4",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "react-virtualized": "^9.22.5"
   }
 }
