--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-virtualized": "^9.22.5",
+    "react-virtualized-auto-sizer": "^1.0.20",
     "string-similarity": "^4.0.4",
-    "tailwindcss": "3.3.3",
-    "react-virtualized": "^9.22.5"
+    "tailwindcss": "3.3.3"
   }
 }
