--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
-    "next": "13.5.2",
+    "next": "^13.5.4",
     "node-releases": "^2.0.13",
-    "postcss": "8.4.30",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-virtualized": "^9.22.5",
     "react-virtualized-auto-sizer": "^1.0.20",
-    "string-similarity": "^4.0.4",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "20.8.6",
+    "@types/react": "18.2.28"
   }
 }
